plugins {
    id "io.spring.dependency-management" // See ../../../build.gradle for version.
    id "jacoco"
    id "java"
    id "org.sonarqube" // See ../../../build.gradle for version.
    id "org.springframework.boot" // See ../../../build.gradle for version.
}

tasks.bootJar {
    archiveFileName = "app.jar"
    duplicatesStrategy = DuplicatesStrategy.WARN
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    annotationProcessor "org.projectlombok:lombok"
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    compileOnly "org.projectlombok:lombok"

    developmentOnly "org.springframework.boot:spring-boot-devtools"

    implementation "net.logstash.logback:logstash-logback-encoder:7.4"
    implementation "org.projectlombok:lombok"
    implementation "org.springframework.boot:spring-boot-starter-actuator"

    runtimeOnly "io.micrometer:micrometer-registry-prometheus"

    testAnnotationProcessor "org.projectlombok:lombok"

    testImplementation "org.springframework.boot:spring-boot-starter-test"
}

dependencyManagement {
    applyMavenExclusions = false
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.1"
        mavenBom "org.springframework.boot:spring-boot-dependencies:3.2.1"
        mavenBom "org.springframework.session:spring-session-bom:2021.2.3"
    }
}

repositories {
    mavenCentral()
    maven {
        name = "GitHub Packages"
        url = uri("https://maven.pkg.github.com/navikt/maven-release")
        credentials(PasswordCredentials) {
            username "token"
            password System.getenv("NAV_TOKEN")
        }
    }
    maven {
        name = "Confluent"
        url = uri("https://packages.confluent.io/maven/")
    }
    maven {
        name = "Shibboleth"
        url = uri("https://build.shibboleth.net/maven/releases/")
    }
    mavenLocal()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

sonarqube {
    properties {
        property "sonar.dynamicAnalysis", "reuseReports"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.language", "java"
        property "sonar.organization", "navikt"
        property "sonar.project.monorepo.enabled", true
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.token", System.getenv("SONAR_TOKEN")
    }
}

tasks.test {
    useJUnitPlatform()
    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
}